2023-06-22/lucas_lehmer_test/log.txt
   Compiling c2rust_out v0.0.0 (/home/c00834010/dev/crusts-benchmarks/2023-06-22/lucas_lehmer_test)
error[E0425]: cannot find function `lucas_lehmer` in this scope
  --> src/main.rs:64:16
   |
64 |             if lucas_lehmer(i) != 0 {
   |                ^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `c2rust_out` (bin "main") due to previous error
